dep upgrades, and other tweaks for performance